objects/Apttus_Config2__ConfigSystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration &amp; Pricing System properties. The record should be named as &quot;System Properties&quot;.</description>
    <fields>
        <fullName>Apttus_Config2__ActionsColumnPosition__c</fullName>
        <description>The position of the actions column in the cart page. Actions column are displayed on the left, but may be overridden using this setting.</description>
        <inlineHelpText>The position of the actions column in the cart page. 

Valid values are: 
============= 
Left 
Right</inlineHelpText>
        <label>Actions Column Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdminUser__c</fullName>
        <description>The admin user name (format = first name, last name)</description>
        <inlineHelpText>The admin user is the default owner of activities created by a user who is not allowed to be the owner (for e.g. customer portal user).</inlineHelpText>
        <label>Admin User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AlertInclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to display radio buttons for Renew, Increment, Amend, Cancel asset actions.</description>
        <inlineHelpText>Check it to display radio buttons for  Renew, Increment, Amend, Cancel asset actions.</inlineHelpText>
        <label>Show Radio Buttons for Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AlertSelectedExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defer constraint check on option selection. Constraint check is done on GoToPricing or other page button click events.</description>
        <inlineHelpText>Check to defer constraint check on option selection. Constraint check is done on GoToPricing or other page button click events.</inlineHelpText>
        <label>Defer Constraint on Option Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoExecutePostPricingStep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether post-pricing step should be executed automatically after pricing. Only applicable when after pricing is enabled by the pricing extension callback.</description>
        <inlineHelpText>Indicates whether post-pricing step should be executed automatically after pricing. Only applicable when after pricing is enabled by the pricing extension callback.</inlineHelpText>
        <label>Auto Execute Post-Pricing Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoExecutePrePricingStep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether pre-pricing step should be executed automatically before pricing. Only applicable when before pricing is enabled by the pricing extension callback.</description>
        <inlineHelpText>Indicates whether pre-pricing step should be executed automatically before pricing. Only applicable when before pricing is enabled by the pricing extension callback.</inlineHelpText>
        <label>Auto Execute Pre-Pricing Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoFinalizeOnCartApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the cart is auto finalized when the cart is approved and ready for finalization.</description>
        <inlineHelpText>Indicates whether the cart is auto finalized when the cart is approved and ready for finalization.</inlineHelpText>
        <label>Auto Finalize On Cart Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRefreshUsageTier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether modifiable usage tiers are refreshed upon PLI change</description>
        <inlineHelpText>Indicates whether modifiable usage tiers are refreshed upon PLI change</inlineHelpText>
        <label>Auto Refresh Usage Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoSyncOnCartApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the cart is auto synchronized when the cart is approved and ready for finalization.</description>
        <inlineHelpText>Indicates whether the cart is auto synchronized when the cart is approved and ready for finalization.</inlineHelpText>
        <label>Auto Sync On Cart Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoUpdateCategoryView__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether auto incremental updates to category view are enabled</description>
        <inlineHelpText>Indicates whether auto incremental updates to category view are enabled</inlineHelpText>
        <label>Auto Update Category View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseProductRelationField__c</fullName>
        <description>The API name of the product field that associates a child product with base product.</description>
        <inlineHelpText>The API name of the product field that associates a child product with base product.</inlineHelpText>
        <label>Base Product Relation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BypassSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether apex code can bypass record sharing</description>
        <inlineHelpText>Indicates whether apex code can bypass record sharing</inlineHelpText>
        <label>Bypass Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BypassShoppingCart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Shopping Cart page will be bypassed.</description>
        <inlineHelpText>A global setting to bypass the shopping cart.</inlineHelpText>
        <label>Bypass Shopping Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CMSPublisherUrl__c</fullName>
        <description>CMS Publisher Endpoint URL</description>
        <inlineHelpText>CMS Publisher Endpoint URL.</inlineHelpText>
        <label>CMS Publisher Endpoint URL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CMSUrl__c</fullName>
        <description>CMS Endpoint URL</description>
        <inlineHelpText>CMS Endpoint URL.</inlineHelpText>
        <label>CMS Endpoint URL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CSSOverride__c</fullName>
        <description>Name of the static resource to override CSS in catalog, cart, attribute and options pages</description>
        <inlineHelpText>Name of the static resource to override CSS in catalog, cart, attribute and options pages</inlineHelpText>
        <label>CSS Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalcNetAdjPercentBeforeRounding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether net adjustment percent should be calculated before rounding the net price</description>
        <inlineHelpText>Indicates whether net adjustment percent should be calculated before rounding the net price</inlineHelpText>
        <label>Calc Net Adj Percent Before Rounding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartEditAccessIdleTimeout__c</fullName>
        <description>Field to specify number of minutes of idle time a configuration can be kept open in edit mode.</description>
        <inlineHelpText>Field to specify number of minutes of idle time a configuration can be kept open in edit mode.</inlineHelpText>
        <label>Cart Edit Access Idle Timeout in Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartTheme__c</fullName>
        <defaultValue>&quot;Classic&quot;</defaultValue>
        <description>Indicates the theme used in the cart pages</description>
        <inlineHelpText>Indicates the theme used in the cart pages 

Valid values(default = &quot;Classic&quot;): 
======================== 
Classic 
Nova</inlineHelpText>
        <label>Cart Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CascadeSharedAttributeUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</description>
        <inlineHelpText>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</inlineHelpText>
        <label>Cascade Shared Attribute Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CleanupInvalidRulePrompt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable removal of line items promted by currently invalid rules.</description>
        <inlineHelpText>Enable removal of line items prompted by currently invalid rules.</inlineHelpText>
        <label>Cleanup Invalid Rule Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ComputeTotalsInSeparateStep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether totaling should be performed in a separate step or combined with the base pricing step</description>
        <inlineHelpText>Indicates whether totaling should be performed in a separate step or combined with the base pricing step</inlineHelpText>
        <label>Compute Totals In Separate Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConstraintRuleExecutionMode__c</fullName>
        <description>Mode which Constraint Rules will execute.</description>
        <label>Constraint Rule Execution Mode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CurrencyFieldPrecision__c</fullName>
        <description>Holds the number of decimal places for the currency fields.
(used by the formatfields function)</description>
        <label>Currency Field Precision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomAssetActionLabelName__c</fullName>
        <description>The name of the custom label for the asset action.</description>
        <inlineHelpText>The name of the custom label for the asset action.</inlineHelpText>
        <label>Custom Asset Action Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomAssetActionPage__c</fullName>
        <description>The name of the custom asset action page</description>
        <inlineHelpText>The name of the custom asset action page</inlineHelpText>
        <label>Custom Asset Action Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomDealGuidancePage__c</fullName>
        <label>Custom Deal Guidance Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomOptionAttributePage__c</fullName>
        <description>The name of the custom attributes page associated with ConfigureBundle and SelectConfigOptionsDetailView pages</description>
        <inlineHelpText>The name of the custom attributes page associated with ConfigureBundle and SelectConfigOptionsDetailView pages</inlineHelpText>
        <label>Custom Option Attribute Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomPrePricingFields__c</fullName>
        <description>Enter the list of custom fields from the line item object that determine the pre-pricing indicator</description>
        <inlineHelpText>Enter the list of custom fields from the line item object that determine the pre-pricing indicator</inlineHelpText>
        <label>Custom Pre-Pricing Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomPricingFields__c</fullName>
        <description>Enter the list of custom fields from the line item object used in pricing</description>
        <inlineHelpText>Enter the list of custom fields from the line item object used in pricing</inlineHelpText>
        <label>Custom Pricing Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultAssetPricingIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether asset pricing is enabled by default for asset related line items</description>
        <inlineHelpText>Indicates whether asset pricing is enabled by default for asset related line items</inlineHelpText>
        <label>Default Asset Pricing Indicator ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultProductsPage__c</fullName>
        <description>The product selection page.</description>
        <inlineHelpText>Specify the product selection page to be displayed. 
Valid values are:
-----------------------
SelectConfigProducts
SelectConfigProductsFilterView</inlineHelpText>
        <label>Default Catalog Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeferPricingUntilCart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to defer pricing until the user clicks on a pricing action. .</description>
        <inlineHelpText>Indicator to defer pricing until the user clicks on a pricing action.</inlineHelpText>
        <label>Defer Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeferValidationCheckInBundles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicator to defer validation check in the bundle configuration step</description>
        <inlineHelpText>Indicator to defer validation check in the bundle configuration step</inlineHelpText>
        <label>Defer Validation Check In Bundles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DirectConfigureAssetActions__c</fullName>
        <description>Comma separated list of asset actions which will configure products directly.</description>
        <inlineHelpText>Comma separated values of Increment, Amend, Renew, Cancel actions. Listed actions will configure products directly.</inlineHelpText>
        <label>Direct Configure Asset Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableChargeTypeTotaling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether charge type totaling is disabled</description>
        <inlineHelpText>Indicates whether charge type totaling is disabled</inlineHelpText>
        <label>Disable Charge Type Totaling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableConstraintRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether constraint rules are disabled</description>
        <inlineHelpText>A global setting to turn off constraint rules.</inlineHelpText>
        <label>Disable Constraint Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableExistingAssetPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether existing asset pricing is disabled.</description>
        <inlineHelpText>Indicates whether existing asset pricing is disabled. If disabled,,prices of existing assets are not rolled up.</inlineHelpText>
        <label>Disable Existing Asset Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisablePricingQueryOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to disable pricing query optimization for carts under the large cart threshold. By default fewer fields are retrieved for line items in the cart to optimize the heap. This indicator is used to disable the optimization to support customization.</description>
        <inlineHelpText>Indicator to disable pricing query optimization for carts under the large cart threshold. By default fewer fields are retrieved for line items in the cart to optimize the heap. This indicator is used to disable the optimization to support customization.</inlineHelpText>
        <label>Disable Pricing Query Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableSOSLTextSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to disable SOSL catalog search. When disabled, system uses SOQL catalog search.</description>
        <inlineHelpText>Indicator to disable SOSL catalog search. When disabled, system uses SOQL catalog search.</inlineHelpText>
        <label>Disable SOSL Text Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayCartActionsAsDropdown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display action buttons inside a drop down menu</description>
        <inlineHelpText>Display action buttons inside a drop down menu</inlineHelpText>
        <label>Display Cart Actions As Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableAdjustmentBuckets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether adjustments may be grouped into buckets for use as targets for applying further adjustments. Only applicable when multiple adjustments are enabled via Max Adjustment Lines setting.</description>
        <inlineHelpText>Indicates whether adjustments may be grouped into buckets for use as targets for applying further adjustments. Only applicable when multiple adjustments are enabled via Max Adjustment Lines setting.</inlineHelpText>
        <label>Enable Adjustment Buckets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableAdjustmentSpread__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether adjustments provided for summary groups and bundles may be spread to child line items that roll into them. Only applicable when multiple adjustments are disabled.</description>
        <inlineHelpText>Indicates whether adjustments provided for summary groups and bundles may be spread to child line items that roll into them. Only applicable when multiple adjustments are disabled.</inlineHelpText>
        <label>Enable Adjustment Spread</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableAggregatePricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether aggregate pricing is enabled</description>
        <inlineHelpText>A global setting to enable aggregate price rules.</inlineHelpText>
        <label>Enable Aggregate Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableAutoReprice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether auto reprice is enabled.</description>
        <inlineHelpText>A global setting to automatically reprice the cart when a price component is modified.</inlineHelpText>
        <label>Enable Auto Reprice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableAutoSequencingForOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether auto sequencing is enabled for options</description>
        <inlineHelpText>A global setting to enable auto sequencing for options</inlineHelpText>
        <label>Enable Auto Sequencing For Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableBasePriceAdjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether base price adjustment is allowed. When enabled Base Price Override is considered when calculating the net price adjustment  %.</description>
        <inlineHelpText>Indicates whether base price adjustment is allowed. When enabled Base Price Override is considered when calculating the net price adjustment  %.</inlineHelpText>
        <label>Enable Base Price Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableCartLockingForConcurrentAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to specify whether cart locking for concurrent access to cart is enabled</description>
        <inlineHelpText>Boolean flag to specify whether cart locking for concurrent access to cart is enabled</inlineHelpText>
        <label>Enable CartLocking for Concurrent Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableContextualTotals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show totals below line items</description>
        <label>Enable Contextual Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableCustomRounding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether list price, base price and selling term fields in the line item should be rounded using the custom field precision setting</description>
        <inlineHelpText>Indicates whether list price, base price and selling term fields in the line item should be rounded using the custom field precision setting</inlineHelpText>
        <label>Enable Custom Rounding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableDefaultQuantityForABOItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether default quantity rules should be applied to ABO items</description>
        <inlineHelpText>Indicates whether default quantity rules should be applied to ABO items</inlineHelpText>
        <label>Enable Default Quantity For ABO Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableDefaultingForOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether defaulting is enabled for options</description>
        <inlineHelpText>A global setting to enable option defaulting rules.</inlineHelpText>
        <label>Enable Defaulting For Options(D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableDefaultingForProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether defaulting is enabled for products</description>
        <inlineHelpText>A global setting to enable product defaulting rules.</inlineHelpText>
        <label>Enable Defaulting For Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableExternalPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether pricing will be done externally</description>
        <inlineHelpText>A global setting to enable external price calls. The external pricing call must be coded and associated with the reprice all button in the view cart page.</inlineHelpText>
        <label>Enable External Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableFastCloning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether fast cloning is enabled</description>
        <inlineHelpText>Indicates whether fast cloning is enabled.</inlineHelpText>
        <label>Enable Fast Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableFieldExpression__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether field expressions are enabled</description>
        <inlineHelpText>A global setting to turn on field expressions.</inlineHelpText>
        <label>Enable Field Expressions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableFile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable use of Files. It is mandatory to Run the Migration after making it true.</description>
        <inlineHelpText>Enable use of Files. It is mandatory to Run the Migration after making it true.</inlineHelpText>
        <label>Enable File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the location feature is enabled</description>
        <inlineHelpText>Indicates whether the location feature is enabled</inlineHelpText>
        <label>Enable Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableMatrixPricingForOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether matrix pricing is enabled for options</description>
        <inlineHelpText>A global setting to enable matrix pricing for options.</inlineHelpText>
        <label>Enable Matrix Pricing For Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableNotificationFeed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables notification feeds for notifications. Currently, this feature is enabled for quote collaboration notifications.</description>
        <inlineHelpText>Enables notification feeds for notifications. Currently, this feature is enabled for quote collaboration notifications.</inlineHelpText>
        <label>Enable Notification Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableOptionalItems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether items in the cart can be toggled as optional</description>
        <inlineHelpText>A global setting to enable optional items in the cart.</inlineHelpText>
        <label>Enable Optional Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnablePaginatedGrid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to specify whether pagination for cart grid is enabled</description>
        <inlineHelpText>Boolean flag to specify whether pagination for cart grid is enabled</inlineHelpText>
        <label>Enable Paginated Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnablePriceMatrixAuditTrail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether audit trail entries would be written to the Adjustment Line Item object for Price Matrices applied to the Line Item</description>
        <inlineHelpText>Indicates whether audit trail entries would be written to the Adjustment Line Item object for Price Matrices applied to the Line Item</inlineHelpText>
        <label>Enable Price Matrix Audit Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnablePriceRuleAuditTrail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether audit trail entries would be written to the Adjustment Line Item object for Price Rules applied to the Line Item</description>
        <inlineHelpText>Indicates whether audit trail entries would be written to the Adjustment Line Item object for Price Rules applied to the Line Item</inlineHelpText>
        <label>Enable Price Rule Audit Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnablePriceRuleForABOItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether price rule adjustments should be applied to ABO items</description>
        <inlineHelpText>Indicates whether price rule adjustments should be applied to ABO items</inlineHelpText>
        <label>Enable Price Rule For ABO Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableTotalLevelIncentive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether total level incentives are enabled</description>
        <inlineHelpText>Indicates whether total level incentives are enabled</inlineHelpText>
        <label>Enable Total Level Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnhancedSearchURL__c</fullName>
        <description>Search URL end point for enhanced search. When it is blank native search is used.</description>
        <inlineHelpText>Search URL end point for enhanced product search</inlineHelpText>
        <label>Enhanced Search URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpandBundleLinesByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show all bundles exapanded with all option lines when cart loads.</description>
        <inlineHelpText>Whether the cart page should load with the option lines displayed for all bundles.</inlineHelpText>
        <label>Expand Bundles In Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FavoriteFilters__c</fullName>
        <description>Populate comma separated values with API names of fields from the favorite configuration object. These fields will be used as filters in the catalog page</description>
        <inlineHelpText>Populate comma separated values with API names of fields from the favorite configuration object. These fields will be used as filters in the catalog page</inlineHelpText>
        <label>FavoriteFilters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldExpressionsExecutionMode__c</fullName>
        <description>Mode which Field Expressions will execute in.</description>
        <inlineHelpText>Valid Values: 
* Client
* Server</inlineHelpText>
        <label>Field Expressions Execution Mode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FixedButtonBar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the button bar will be fixed on catalog, configuration and cart pages.</description>
        <inlineHelpText>Indicates that the button bar will be fixed on catalog, configuration and cart pages.</inlineHelpText>
        <label>Fixed Button Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupByFields__c</fullName>
        <label>GroupBy Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidePageDefault__c</fullName>
        <description>The default guide page for product selection</description>
        <inlineHelpText>The default guide page for product selection</inlineHelpText>
        <label>Guide Page Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideAssetActions__c</fullName>
        <description>Comma separated list  of asset actions which should be hidden.</description>
        <inlineHelpText>Comma separated values of Increment, Amend, Renew, Cancel actions. Listed actions will be hidden from the users.</inlineHelpText>
        <label>Hide Asset Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideCartViewsCreation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether &quot;Create New View&quot; option on Cart View drop down is hidden.</description>
        <inlineHelpText>Indicates whether &quot;Create New View&quot; option on Cart View drop down is hidden.</inlineHelpText>
        <label>Hide Cart Views Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideCartViews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Cart Views</description>
        <inlineHelpText>Indicates whether cart views will be hidden</inlineHelpText>
        <label>Hide Cart Views</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideCopyAction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether copy action will be hidden in the cart view</description>
        <inlineHelpText>Indicates whether copy action will be hidden in the cart view</inlineHelpText>
        <label>Hide Copy Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideDatesForOneTime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Dates For One Time Charge</description>
        <inlineHelpText>Hide Dates For One Time Charge</inlineHelpText>
        <label>Hide Dates For One Time Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideEvergreenEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the end date will be hidden in the cart view for evergreen line items</description>
        <inlineHelpText>Indicates whether the end date will be hidden in the cart view for evergreen line items</inlineHelpText>
        <label>Hide Evergreen End Date</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>